FIX: Marquee Component Fixed infinite loop with no white space

--- a/src/components/Marquee/marquee.css
+++ b/src/components/Marquee/marquee.css
@@ -1,19 +1,7 @@
-.marquee-container {
-  display: flex;
-  overflow: hidden;
-  width: 100%;
+.marquee_content {
+  animation: scrolling 20s linear infinite;
 }
-
-.marquee-content {
-  white-space: nowrap;
-  animation: marquee 50s linear infinite;
-}
-
-@keyframes marquee {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
+@keyframes scrolling {
+  0% { transform: translate(0);}
+  100% { transform: translateX(-100%);}
 }
